fondo verde para footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3116,7 +3116,7 @@ Top bar style
   background: #222; }
 
 /*
-Career 
+Career
 */
 .career-card {
   padding: 40px 20px;
@@ -3443,7 +3443,7 @@ Image with text cards
 Footer styles
 */
 .footer.footer-dark {
-  background: #212121; }
+  background: #096b44; }
   .footer.footer-dark h3 {
     color: #fff;
     margin-bottom: 20px;
